--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	
 		
 		<script>
-			var androidConfigPath = "http://bh.apk.qckdl.top:8111/api/oss/down/local/228/36"; // 安卓
+			var androidConfigPath = "http://baidu.com"; // 安卓
 						
 			var iosConfigPath = "./app/ios.mobileconfig"; // 苹果
 						    
